<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/activity_horizontal_margin"
      android:orientation="vertical"
      >

    <TextView
        android:id="@+id/txt_station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Ortiz Mena y Politecnico"
        android:textColor="@color/textPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txt_station_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Ortiz Mena y Politecnico (La promesa de Dios)"
        android:textColor="@color/textSecondary"
        />

    <TextView
        android:id="@+id/txt_gas_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/gas_available"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/last_message"
        android:textSize="14sp"
        android:textColor="@color/textSecondary"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txt_last_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Fila rapida . En menos de 5 min te despachan hay de las 2"
        android:textColor="@color/textPrimary"
        android:textStyle="normal"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:text="@string/make_an_update"
        android:textColor="@color/white"
        />


  </LinearLayout>

</android.support.v7.widget.CardView>