<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gerardogtn.korimagas.ui.activity.GasStationDetailActivity"
    >

  <include android:id="@+id/toolbar_layout"
      layout="@layout/toolbar"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_marginTop="@dimen/activity_horizontal_margin"
      >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/is_there_gas_available"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <CheckBox
        android:id="@+id/checkbox_is_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        />

  </LinearLayout>

  <EditText
      android:id="@+id/etxt_message"
      android:layout_width="match_parent"
      android:layout_height="140dp"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_marginTop="@dimen/activity_horizontal_margin"
      android:hint="@string/what_s_going_on_at_the_gas_station"
      android:textColorHint="@color/textDisabled"
      android:textColor="@color/textPrimary"
      android:padding="8dp"
      tools:text="One big lesson for Americans from #Brexit vote:It's really important that you VOTE this November no matter what the polls predict.123456789"
      />

  <TextView
      android:id="@+id/txt_counter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_gravity="right"
      android:text="140"
      android:textSize="15sp"
      />

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/btn_make_update"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_marginTop="@dimen/activity_horizontal_margin"
      android:text="@string/update_gas_station"
      />

</LinearLayout>
